don't use startdragdistance here

emit click if the cursor is still in the area regardless of the distance travelled
this because MouseEventListener doesn't start drags

BUG:320893
FIXED-IN:4.11